--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,12 +1,13 @@
-name: learn-github-actions
-on: [push]
+name: PostgreSQL service example
+on: push
+
 jobs:
   # Label of the container job
   container-job:
     # Containers must run in Linux based operating systems
     runs-on: ubuntu-latest
     # Docker Hub image that `container-job` executes in
-    container: node:10.18-jessie  
+    container: node:10.18-jessie
 
     # Service containers to run with `container-job`
     services:
@@ -32,16 +33,15 @@ jobs:
       # Performs a clean installation of all dependencies in the `package.json` file
       # For more information, see https://docs.npmjs.com/cli/ci.html
       - name: Install dependencies
-        run: npm ci
+        run: ls -l
 
       - name: Connect to PostgreSQL
         # Runs a script that creates a PostgreSQL client, populates
         # the client with data, and retrieves data
-        run: node client.js
+        run: ps -ef
         # Environment variable used by the `client.js` script to create a new PostgreSQL client.
         env:
           # The hostname used to communicate with the PostgreSQL service container
           POSTGRES_HOST: postgres
           # The default PostgreSQL port
           POSTGRES_PORT: 5432
-
