--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,5 +1,5 @@
 name: PostgreSQL service example
-on: push
+on: [push, workflow_dispatch]
 
 jobs:
   # Label of the container job
@@ -45,3 +45,4 @@ jobs:
           POSTGRES_HOST: postgres
           # The default PostgreSQL port
           POSTGRES_PORT: 5432
+
